--- a/builders/python/Dockerfile
+++ b/builders/python/Dockerfile
@@ -2,10 +2,10 @@ FROM python:3
 
 ENV APP_HOME /usr/src/app
 WORKDIR $APP_HOME
+
 COPY . ./
 
-EXPOSE 5000
+RUN pip3 install -r requirements.txt
 
-RUN pip install flask
-
-CMD ["python", "-u", "-m", "flask", "run", "--host", "0.0.0.0"]
+# CMD ["python", "-u", "-m", "flask", "run", "--host", "0.0.0.0"]
+ENTRYPOINT ["./gunicorn_starter.sh"]
