--- a/builders/python/Dockerfile
+++ b/builders/python/Dockerfile
@@ -7,5 +7,6 @@ COPY . ./
 
 RUN pip3 install -r requirements.txt
 
+# Development purposes
 # CMD ["python", "-u", "-m", "flask", "run", "--host", "0.0.0.0"]
-ENTRYPOINT ["./gunicorn_starter.sh"]
+CMD ["gunicorn", "builder:app", "-w", "2", "--threads", "2", "-b 0.0.0.0:5000"]
